Finished my resume project

--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
   <meta charset="utf-8">
 
   <title>My Resume</title>
-
+  <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
+  <link href="https://fonts.googleapis.com/css?family=Lato|Open+Sans" rel="stylesheet">
   <link rel="stylesheet" href="css/index.css">
 
   <!--[if lt IE 9]>
@@ -14,6 +15,97 @@
 </head>
 
 <body>
-  <h1>My Resume</h1>
+  <div id="section-left">
+    <div class="section intro">
+      <div class="logo"></div>
+      <h1>Latwan Wesley</h1>
+      <div class="content">
+        <span class="dob">2 Feb 1992</span> <br> 
+        <span class="intro">Jr.</span> <br> 
+        <span class="intro">Web</span> <br> 
+        <span class="intro">Developer</span> <br> 
+      </div>
+      <hr>
+      <div id="contact">
+
+        <span class="num">(248) 787-****</span>
+
+        <div class="email">
+          <i class="fa fa-envelope-open-o" aria-hidden="true"></i>
+          <a href="mailto:wesleylatwan22@gmail.com">wesleylatwan22@gmail.com</a>
+        </div>
+        <div class="web">
+          <i class="fa fa-link" aria-hidden="true"></i>
+          <a href="www.linkedin.com/in/latwan-wesley-5b31a7117">LinkedIn</a>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <div id="section-right">
+    <div class="wrapper">
+      <div class="section">
+        <div class="title">
+          <i class="fa fa-user" aria-hidden="true"></i> 
+          Profile
+        </div>
+        <p>I am a web developer with vast array of knowledge in many different front end and back end languages, responsive frameworks, databases, and best code practices. My objective is to be the best web developer that I can be and to contribute to the technology industry all that I know and can do.</p>
+      </div>
+
+      <div class="section">
+        <div class="title">
+          <i class="fa fa-pencil" aria-hidden="true"></i>
+          Experience
+        </div>
+        <div class="content">
+          <h2>Quality Engineer</h2>
+          <h3>International Automotive Components | MAY 2015 &raquo; September 2018</h3>
+          <ul>
+            <li>Perform testing and process review for (FCA)</li>
+            <li>Develping and maintaining quality assurance of production material</li>
+            <li>Troubleshooting and repair on-site production material for functionality and appearance</li>
+            <!-- <li>Communication liasion between affiliate manufactures located in Mexico, Asia, Canada and the United States</li> -->
+            <!-- <li>Investigation and root-cause analysis</li> -->
+            <!-- <li>Conduct and generate assist groups for network and certifications efforts to the customer</li>   -->
+          </ul>
+       </div>
+
+
+      <div class="section">
+        <div class="title">
+          <i class="fa fa-book" aria-hidden="true"></i>
+          Education
+        </div>
+        <p>Lincoln High School: High School Diploma &raquo; (2010)</p>
+        <p>Siena Heights University: Business of Science Aministration & Accounting &raquo; 2018</p> 
+        <p>Lambda School: Full Stack Web Developer &raquo; 2019</p>
+
+      </div>
+
+      <div class="section">
+        <div class="title">
+          <i class="fa fa-book" aria-hidden="true"></i>
+          Skills
+        </div>
+        <ul>
+          <li>Programming</li>
+          <li>Techinical system proficiency</li>
+          <li>Effectice communication skills</li>
+        </ul>
+      </div>
+
+      <div class="section">
+        <div class="title">
+          <i class="fa fa-trophy" aria-hidden="true"></i>
+          Awards
+        </div>
+        <div class="content">
+          <h2>Dour Volunteer Mentor</h2>
+          <h3>YMCA Help Center</h3>
+          <!-- <span class="date">2015</span> -->
+        </div>
+      </div>
+    </div>
+  </div>
 </body>
 </html>
